# ConstrucorsitesAI

./: .gitignore  CLAUDE.md  CONTINUOUS-PLAN.md  OVERNIGHT-PLAN.md  PHASE-E-REPORT.md  PHASE-G-J-SUMMARY.md  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/data/: awwwards_corpus.json  design_patterns.json
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_projects_snapshots_messages.py  0003_billing.py  0004_template_fullstack.py  0005_github_export.py  0005_messages_selected_elements.py  0006_users_github_oauth.py  (+20 more)
apps/api/scripts/: compare_to_reference_corpus.py  e2e_manifest.py  eval_profiles.py  flip_milestone.py  niche_batch.py  preset_distinct.py  prove_reference_ceiling.py  reference_flip_milestone.py
apps/api/skills/: README.md
apps/api/tests/: conftest.py  test_accept_gauntlet.py  test_acceptance.py  test_admin_generator.py  test_agent_builder.py  test_agent_escalation.py  test_agent_gate_feedback.py  test_agent_loop_cycle.py  test_agent_message.py  test_agent_native.py  test_agent_progress.py  test_anon_seam.py  test_app_doctor.py  test_app_errors.py  test_app_theme.py  test_art_director_brief_parse.py  test_art_director_writer.py  test_async_onboarding.py  test_attestation.py  test_auth.py  test_auth_session.py  test_backend_guardrail.py  test_blog_feed_reachability.py  test_brief_narration.py  test_build_error_enrichment.py  test_build_exe_endpoint.py  test_build_plan.py  test_byo_vps.py  test_cabinet_gate.py  test_calendar_unplaceable_fallback.py  test_catalog_coherence_gate.py  test_chip_causality.py  test_chip_pixel_gate.py  test_compose_gate.py  test_container_edit_tsx_validity.py  test_contrast_guard.py  test_corpus_and_patterns.py  test_coverage_gate.py  test_data_gate.py  test_defect_registry.py  (+104 more)
apps/llm-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.demo.yml  init.sql  pyproject.toml
apps/llm-gateway/deploy/: RUNBOOK.md
apps/llm-gateway/tests/: conftest.py  test_aitunnel_provider.py  test_cache.py  test_chat_non_streaming.py  test_chat_streaming.py  test_multimodal_content.py  test_oneprovider_provider.py  test_pricing.py  test_safety.py  test_vsegpt_native.py  test_vsegpt_provider.py
apps/orchestrator/: .env.example  README.md  pyproject.toml
apps/orchestrator/scripts/: build-template-images.sh  smoke-cleanup.sh  smoke-vps.sh
apps/orchestrator/tests/: test_auth_secret.py  test_brief_narration_template.py  test_compile_status.py  test_demo_seed_writer.py  test_demo_seeder.py  test_dep_doctor.py  test_docker_client.py  test_entity_auth_gate.py  test_entity_concurrent_update.py  test_entity_date_cast_crash.py  test_entity_datetime_gap.py  test_entity_default_validation.py  test_entity_export_truncation.py  test_entity_field_clear_gap.py  test_entity_kpi_count_windowing.py  test_entity_number_constraints_gap.py  test_entity_rbac_gap.py  test_entity_referential_integrity.py  test_entity_required_default_semantics.py  test_entity_search_findability.py  test_entity_sort_windowing.py  test_entity_uniqueness_gap.py  test_event_publisher.py  test_exe_builder.py  test_filter_windowing_gap.py  test_hibernate.py  test_ingress.py  test_list_pagination_cap.py  test_nginx_writer.py  test_postgres_admin.py  test_provisioner.py  test_reference_column_surfacing.py  test_remix_cta_template.py  test_remote_deploy.py  test_runtime_probe.py  test_ssh_verify.py  test_stack_registry.py  test_template_dependency_integrity.py
secondbrain/: .gitignore  AGENTS.md  README.md  pyproject.toml
secondbrain/daily/: 2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-27.md.localbak  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md
secondbrain/hooks/: after-agent-response.py  post-tool-use.py  pre-compact.py  session-end.py  session-start.py
secondbrain/knowledge/: index.md  log.md  project-context.md
secondbrain/knowledge/concepts/: agent-d-orchestrator-devops-v2-phase-a.md  api-contract-omnia.md  api-crash-loop-fix-uv-run-pypi-timeout.md  auto-memory-bridge.md  claude-haiku-45-integration-via-proxyapiru.md  code-view-and-snapshot-management.md  daily-2026-05-17-summary.md  daily-2026-05-18-summary.md  daily-2026-05-19-summary.md  daily-2026-05-26-summary.md  daily-ingestion-process.md  enhanced-chat-ui-and-prompt-queueing.md  file-extractor-pipeline.md  gemini-integration-with-geo-block-bypass.md  gemini-integration-with-llm-gateway.md  gemini-thinking-mode-and-token-budget-fix.md  geo-block-circumvention-via-uk-proxy.md  omnia-v2-architecture-phase-a.md  omniaai-generation-quality-regressions-2026-05-26.md  proxyapi-anthropic-route.md  real-time-streaming-preview-with-morphdom.md  realtime-streaming-preview.md  secondbrain-runtime-port.md  secondbrain-runtime.md  vps-setup-for-omnia-v2-phase-a-runtime.md  wiki-taxonomy-and-link-conventions.md  workspace-ui-polish-and-optimistic-insert.md  workspace-uiux-polish.md  zero-files-silent-failure-fix.md  zero-files-silent-failure.md
secondbrain/knowledge/connections/: api-stability-and-performance-directly-impacts-user-experience-and-platform-reliability.md  code-view-and-snapshot-card-integration.md  deployment-stability-and-startup-performance.md  end-to-end-validation-of-new-features.md  gemini-integration-and-geo-blocking-solution-enables-new-llm-capabilities-for-users.md  gemini-token-budget-and-output-quality.md  haiku-integration-and-zero-files-fix-synergy.md  monorepo-structure-and-agent-briefs-guide-development-and-maintain-consistency.md  streaming-preview-and-chat-ui-enhancements.md
secondbrain/scripts/: check_staleness.py  compile.py  config.py  flush.py  llm_provider.py  sync_memory.py  sync_project_docs.py  update_context.py  utils.py
(+771 files in other folders)
