[project]
name = "omnia-secondbrain"
version = "0.1.0"
description = "SecondBrain memory compiler for Omnia.AI team"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk>=0.1.29",
  "python-dotenv>=1.0.0",
  "tzdata>=2024.1",
  # Direct REST calls for the `gemini` LLM backend (scripts/llm_provider.py).
  # Same library already lives transitively under claude-agent-sdk → mcp, but
  # we depend on it explicitly so the gemini backend works even if SDK pins move.
  "httpx>=0.27,<1.0",
]

[tool.uv]
package = false
