[project]
name = "omnia-api"
version = "0.0.1"
description = "Omnia.AI — Backend Core (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Omnia.AI" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "rq>=1.16,<2.0",
    "minio>=7.2,<8.0",
    "pygit2>=1.15,<2.0",
    "playwright>=1.47,<2.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    # passlib 1.7.x detect_wrap_bug check fails on bcrypt>=4.1 — pin to 4.0.x.
    "bcrypt>=4.0,<4.1",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "email-validator>=2.2,<3.0",
    "structlog>=24.1,<25.0",
    "httpx>=0.27,<1.0",
    "slowapi>=0.1.9,<1.0",
    "python-slugify>=8.0,<9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnia_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "RUF",
    "ASYNC",
]
ignore = [
    "B008",  # FastAPI Depends() idiom
]

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["E501"]
"tests/**" = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["omnia_api"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*", "rq.*", "pygit2.*", "minio.*", "slugify.*"]
ignore_missing_imports = true
