[project]
name = "omnia-orchestrator"
version = "0.0.1"
description = "Omnia.AI V2 — runtime orchestrator for full-stack dev containers"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Omnia.AI" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<1.0",
    "docker>=7.1,<8.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.1,<25.0",
    "httpx>=0.27,<1.0",
    "python-slugify>=8.0,<9.0",
    "sentry-sdk[fastapi]>=2.18,<3.0",
    "redis>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnia_orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
