[project]
name = "omnia-api"
version = "0.0.1"
description = "Omnia-generated FastAPI service (async + Postgres)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<1.0",
    "asyncpg>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "python-multipart>=0.0.20,<1.0",
    "structlog>=24.4,<25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
