[project]
name = "omnia-tgbot"
version = "0.0.1"
description = "Omnia-generated Telegram bot (aiogram 3 + Postgres)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4.0",
    "asyncpg>=0.30,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "structlog>=24.4,<25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
